<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingVertical="100dp"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/tv_login_title"
        android:layout_width="333dp"
        android:layout_height="163dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/total_emergency_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/user_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:backgroundTint="#00BCD4"
        android:gravity="start"
        android:hint="@string/user_string"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_title"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password_string"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:autofillHints="password"
        android:backgroundTint="#00BCD4"
        android:gravity="start"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#3BBAFF"
        android:text="@string/tv_login"
        android:textAllCaps="true"
        android:textColor="#2A2929"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_login_title"
        app:layout_constraintTop_toBottomOf="@+id/remember_me" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3BBAFF"
        android:text="@string/tv_register"
        android:textAllCaps="true"
        android:textColor="#2A2929"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintTop_toTopOf="@+id/bt_login" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Remember me?"
        app:layout_constraintStart_toStartOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

</androidx.constraintlayout.widget.ConstraintLayout>